# grr-util

./: .gitignore  Cargo.toml
grr-util/: README.md
grr-util-derive/: Cargo.toml
grr-util-derive/src/: lib.rs
grr-util-derive/tests/: color_fields.rs  matrix_fields.rs  scalar_fields.rs  vector_fields.rs
grr-util/src/: color.rs  image_format.rs  image_manager.rs  lib.rs  shader_manager.rs  vertex.rs
grr-util/src/mesh/: aabb.rs  common.rs  line.rs  primitive_bag.rs  quad.rs
src/: image_format.rs  image_manager.rs  lib.rs  screenshot.rs  shader_manager.rs  vertex.rs  window.rs
src/mesh/: aabb.rs  line.rs  mod.rs  primitive_bag.rs  quad.rs
