[package]
name = "grr-util"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = {path = "/home/mason/workspace/grr"}
art-util = {path = "/home/mason/workspace/artprojects/art-util"}
slotmap = "*"
itertools = "*"
glutin = "*"
num-traits = "*"
nalgebra = "*"
ndarray = "*"
gl = "*"
image = "*"
thiserror = "*"
palette = "*"
