[package]
name = "grr-util"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = {path = "/home/mason/workspace/grr"}
grr-imgui = {path = "/home/mason/workspace/grr-imgui" }
art-util = {path = "/home/mason/workspace/art-util"}
slotmap = "*"
itertools = "*"
glutin = "0.26"
num-traits = "*"
nalgebra = "0.25"
nalgebra-glm = "0.11"
ndarray = "*"
gl = "*"
image = "*"
thiserror = "*"
palette = "*"
imgui = "0.7"
imgui-winit-support = "0.7"
